# FoundationCourse

./: .gitmodules  README.md
CMake - Hello World/: CMakeLists.txt  main.cpp
CMake - Setting up a Library/: CMakeLists.txt  main.cpp
CMake - Setting up a Library/geometry/: CMakeLists.txt  rectangle.cpp  rectangle.h  shape.cpp  shape.h  triangle.cpp  triangle.h
SubmoduleswithGit/: CMakeLists.txt  main.cpp
